@@ -7,8 +7,6 @@ AM_MAINTAINER_MODE
 
 dnl Checks for programs.
 AC_PROG_CC
-AM_PROG_LEX
-AC_PROG_YACC
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 
